Further address PR comments
- Restructure files and directories
- Optimize several functions
- Change over more test cases to use np.allclose
- Create script to auto-generate test suite sample files
- Other small fixes

--- a/constant_config.yaml
+++ b/constant_config.yaml
@@ -1,13 +1,11 @@
 # Reminders/clarifications: 
 # - this is YAML, so NO TABS or the parser will die!
-# - unless source code is changed, do not remove any fields (as of 2020-12-04)
+# - unless source code is changed, do not remove any fields (as of 2021-02-15)
 
 --- 
 TankDimensionsInches:
-    # Note: first value is always null for code clarity later
-
-    diameter: [null, 2.5, 3, 3.625, 3, 2.5] 
-    length: [null, 0.5, 0.75, 37.125, 0.75, 0.875]
+    diameter: [2.5, 3, 3.625, 3, 2.5]        #Inches (in)
+    length: [0.5, 0.75, 37.125, 0.75, 0.875] #Inches (in)
 
 NitrousOxideProperties:
     critical_temp: 309.57          #kelvin (k)
@@ -15,9 +13,9 @@ NitrousOxideProperties:
     critical_density: 452.0        #kilograms per metres cubed (kg/m^3)
     
 EquationConstants:
-    eqn4_1: [null,-6.71893, 1.35966, -1.3779, -4.051]
-    eqn4_2: [null, 1.72328, -0.8395, 0.5106, -0.10412]
-    eqn4_3: [null, -1.009, -6.28792, 7.50332, -7.90463, 0.629427]
+    eqn4_1: [-6.71893, 1.35966, -1.3779, -4.051]             #Dimensionless
+    eqn4_2: [1.72328, -0.8395, 0.5106, -0.10412]             #Dimensionless
+    eqn4_3: [-1.009, -6.28792, 7.50332, -7.90463, 0.629427]  #Dimensionless
 
 EngineInfo:
     #Distance from the bottom of the fuel grain to the bottom of the oxidizer tank
@@ -34,4 +32,4 @@ EngineInfo:
 TestConditions:
     local_atmos_pressure: 14.383    #pounds per square inch (psi)
     water_used_for_heating: 15      #pounds (lb)
-    end_of_burn: 395.1              #seconds
+    end_of_burn: 395.1              #seconds (s)
